# doca

./: .gitignore  AUTHORS  README.md  meson.build
data/: assets.gresource.xml  com.github.foss-io.doca.appdata.xml.in  com.github.foss-io.doca.desktop.in  com.github.foss-io.doca.gschema.xml  meson.build  stylesheet.css
po/: POTFILES  com.github.foss-io.doca.pot  pt_BR.po
src/: Application.vala  Main.vala  meson.build
src/docker_api/: DockerEngineApi.vala
src/docker_api/adapter/: IDockerEngineApi.vala
src/entity/: Container.vala  Distribution.vala  Image.vala  Process.vala  Stats.vala
src/os/: DistributionInfo.vala
src/os/adapter/: IDistributionInfo.vala
src/service/: ContainerService.vala  DistributionService.vala
src/service/adapter/: IContainerService.vala  IDistributionService.vala
src/service/exception/: ContainerError.vala
src/utils/: Settings.vala
src/widget/: ContainerListView.vala  Overlay.vala  Paned.vala  Welcome.vala  Window.vala
src/widget/component/: Button.vala  ContainerListRow.vala  Dialog.vala  HeaderBar.vala
src/widget/util/: Settings.vala
src/widgets/: ContainerList.vala  ContainerListView.vala  HeaderBar.vala  Paned.vala  Welcome.vala  Window.vala
src/widgets/components/: Button.vala  ContainerListRow.vala  Dialog.vala  HeaderBar.vala
src/widgets/utils/: Settings.vala
