docker_api_files = files (
    'docker_api/adapter/IDockerEngineApi.vala',
    'docker_api/DockerEngineApi.vala'
)

entity_files = files (
    'entity/Container.vala',
    'entity/Distribution.vala',
    'entity/Image.vala',
    'entity/Process.vala',
    'entity/Stats.vala'
)

os_files = files (
    'os/adapter/IDistributionInfo.vala',
    'os/DistributionInfo.vala'
)

service_files = files (
    'service/adapter/IContainerService.vala',
    'service/adapter/IDistributionService.vala',
    'service/exception/ContainerError.vala',
    'service/ContainerService.vala',
    'service/DistributionService.vala'
)

app_files = files (
    'Application.vala',
    'Main.vala'
)

widget_files = files (
  'widgets/components/ContainerListRow.vala',
  'widgets/components/Button.vala',
  'widgets/components/HeaderBar.vala',
  'widgets/utils/Settings.vala',
  'widgets/ContainerList.vala',
  'widgets/Paned.vala',
  'widgets/Welcome.vala',
  'widgets/Window.vala'
)
