docker_api_files = files (
    'docker_api/adapter/IDockerEngineApi.vala',
    'docker_api/DockerEngineApi.vala'
)

entity_files = files (
    'entity/Container.vala',
    'entity/Distribution.vala',
    'entity/Image.vala',
    'entity/Process.vala',
    'entity/Stats.vala'
)

os_files = files (
    'os/adapter/IDistributionInfo.vala',
    'os/DistributionInfo.vala'
)

service_files = files (
    'service/adapter/IContainerService.vala',
    'service/adapter/IDistributionService.vala',
    'service/exception/ContainerError.vala',
    'service/ContainerService.vala',
    'service/DistributionService.vala'
)

app_files = files (
    'Application.vala',
    'Main.vala'
)

widget_files = files (
  'widget/component/ContainerListRow.vala',
  'widget/component/Button.vala',
  'widget/component/HeaderBar.vala',
  'widget/component/Dialog.vala',
  'widget/util/Settings.vala',
  'widget/ContainerListView.vala',
  'widget/Paned.vala',
  'widget/Welcome.vala',
  'widget/Window.vala'
)
